@@ -2,13 +2,13 @@
 package com.toy.nar.app.analysis.service;
 
 import com.toy.nar.app.analysis.converter.CombinationDtoConverter;
+import com.toy.nar.app.analysis.dto.PageCombinationResponse;
 import com.toy.nar.domain.combination.TeamCompositionFactory;
 import com.toy.nar.domain.combination.ChampionCombination;
 import com.toy.nar.domain.combination.GameTeamKey;
 import com.toy.nar.domain.combination.TeamComposition;
 import com.toy.nar.app.analysis.dto.CombinationDetailDto;
 import com.toy.nar.app.analysis.dto.CombinationResponseDto;
-import com.toy.nar.app.analysis.dto.CombinationStatDto;
 import com.toy.nar.domain.combination.strategy.CombinationFilterManager;
 import com.toy.nar.domain.combination.strategy.MultiCombinationFilterDto;
 import com.toy.nar.common.NameNormalizer;
@@ -16,11 +16,16 @@ import com.toy.nar.domain.game.entity.GameParticipant;
 import com.toy.nar.domain.game.repository.GameParticipantRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import com.toy.nar.app.analysis.dto.CombinationFilterDto;
 
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -39,83 +44,65 @@ public class CombinationService {
 	private final CombinationIdService idService;
 	private final CombinationFilterManager filterManager;
 
-
-	public List<CombinationResponseDto> findTopCombinationsV2(
+	public PageCombinationResponse findTopCombinationsV2(
 		List<String> championNames,
-		MultiCombinationFilterDto filter) {
+		MultiCombinationFilterDto filter,
+		Pageable pageable) {
 
-		List<String> normalizedChampionNames = championNames.stream()
-			.map(NameNormalizer::normalizeChampionName)
-			.collect(Collectors.toList());
+		List<GameParticipant> allParticipants = getFilteredParticipants(championNames, filter);
+		long totalCount = allParticipants.size();
 
-		List<GameParticipant> participants = getFilteredParticipants(normalizedChampionNames, filter);
 
-		if (participants.isEmpty()) {
-			log.warn("⚠️ No participants found for filter: {}", filter);
-			return Collections.emptyList();
+		if (allParticipants.isEmpty()) {
+			return new PageCombinationResponse(Collections.emptyList(), pageable, false, totalCount);
 		}
 
-		List<TeamComposition> compositions = convertToCompositions(participants);
-		List<ChampionCombination> combinations = analyzer.findTopCombinations(compositions, championNames);
+		List<TeamComposition> allCompositions = convertToCompositions(allParticipants);
+		List<ChampionCombination> allCombinations = analyzer.findTopCombinations(allCompositions, championNames);
 
-		List<ChampionCombination> sortedCombinations = combinations.stream()
-			.sorted(ChampionCombination::compareByRecency)
-			.limit(10)
-			.collect(Collectors.toList());
+		// 동적 정렬 적용 (기존 getComparator 사용)
+		String sortType = pageable.getSort().stream()
+			.findFirst()
+			.map(Sort.Order::getProperty)
+			.orElse("frequency");
+		log.info("Applied sortType: {}", sortType);
 
-		// 각 조합에 대해 고유 ID 생성 및 저장
-		return IntStream.range(0, sortedCombinations.size())
+		Comparator<ChampionCombination> comparator = getComparator(sortType);
+		List<ChampionCombination> sortedCombinations = allCombinations.stream()
+			.sorted(comparator)
+			.toList();
+
+		// 이제 combinations 리스트를 pageable로 슬라이스
+		int from = (int) pageable.getOffset();  // page * size
+		int to = Math.min(from + pageable.getPageSize(), sortedCombinations.size());
+		List<ChampionCombination> pagedCombinations = sortedCombinations.subList(from, to);
+
+		// ID 생성 및 DTO 변환
+		List<CombinationResponseDto> response = IntStream.range(0, pagedCombinations.size())
 			.mapToObj(i -> {
-				ChampionCombination combination = sortedCombinations.get(i);
+				ChampionCombination combination = pagedCombinations.get(i);
 				String combinationId = idService.createMultiCombinationId(combination.getChampions(), filter);
-				return converter.toResponseDto(combination, i + 1, combinationId);
+				return converter.toResponseDto(combination, from + i + 1, combinationId);  // rank는 전체 순위 기반
 			})
-			.collect(Collectors.toList());
+			.toList();
+
+		boolean hasNext = to < sortedCombinations.size();
+		return new PageCombinationResponse(response, pageable, hasNext, (long) sortedCombinations.size());  // totalCount를 실제 조합 수로 변경
 	}
 
-	// 조합 ID를 포함한 응답 반환
-	public List<CombinationResponseDto> findTopCombinations(
-		List<String> championNames,
-		CombinationFilterDto filter) {
+	private Comparator<ChampionCombination> getComparator(String sortType) {
+		return switch (sortType != null ? sortType.toLowerCase() : "frequency") {  // 빈도수 디폴트
+			case "frequency" -> ChampionCombination::compareByFrequency;
+			case "recency" -> ChampionCombination::compareByRecency;
+			case "patch" -> ChampionCombination::compareByPatch;
+			default -> ChampionCombination::compareByFrequency;  // 디폴트 빈도수
+		};
+	}
 
-		List<String> normalizedChampionNames = championNames.stream()
-			.map(NameNormalizer::normalizeChampionName)
-			.collect(Collectors.toList());
-
-		List<GameParticipant> participants = gameParticipantRepository.findFilteredParticipants(
-			normalizedChampionNames,
-			filter.year(),
-			filter.split(),
-			filter.leagueName(),
-			filter.teamName(),
-			filter.patch()
-		);
-
-		if (participants.isEmpty()) {
-			log.warn("⚠️ No participants found");
-			return Collections.emptyList();
-		}
-
-		List<TeamComposition> compositions = convertToCompositions(participants);
-		List<ChampionCombination> combinations = analyzer.findTopCombinations(compositions, championNames);
-
-		List<ChampionCombination> sortedCombinations = combinations.stream()
-			.sorted(ChampionCombination::compareByRecency)
-			.limit(10)
-			.collect(Collectors.toList());
-
-		// 각 조합에 대해 고유 ID 생성 및 저장
-		return IntStream.range(0, sortedCombinations.size())
-			.mapToObj(i -> {
-				ChampionCombination combination = sortedCombinations.get(i);
-
-				// 조합 ID 생성 및 저장
-				String combinationId = idService.createCombinationId(
-					combination.getChampions(), filter);
-
-				return converter.toResponseDto(combination, i + 1, combinationId);
-			})
-			.collect(Collectors.toList());
+	public Pageable applyDynamicSort(Pageable pageable, String sortType) {
+		Sort.Direction direction = Sort.Direction.DESC;
+		Sort sort = Sort.by(direction, sortType != null ? sortType.toLowerCase() : "frequency");
+		return PageRequest.of(pageable.getPageNumber(), pageable.getPageSize(), sort);
 	}
 
 	// 새로운 메서드: ID로 상세정보 조회
@@ -141,68 +128,59 @@ public class CombinationService {
 		throw new IllegalArgumentException("Invalid combination ID: " + combinationId);
 	}
 
-	// 새로운 메서드: Multi 필터 상세정보 조회
 	public CombinationDetailDto getCombinationDetailMulti(
 		List<String> championNames,
 		MultiCombinationFilterDto filter) {
 
 		List<String> normalizedChampionNames = championNames.stream()
 			.map(NameNormalizer::normalizeChampionName)
-			.collect(Collectors.toList());
+			.toList();
 
-		List<GameParticipant> participants = getFilteredParticipants(normalizedChampionNames, filter);
+		DetailData detailData = retrieveCombinationAndGameDetails(normalizedChampionNames, filter, true);
 
-		if (participants.isEmpty()) {
-			throw new IllegalArgumentException("No combination found for: " + championNames);
-		}
-
-		List<TeamComposition> compositions = convertToCompositions(participants);
-		List<ChampionCombination> combinations = analyzer.findTopCombinations(compositions, championNames);
-
-		if (combinations.isEmpty()) {
-			throw new IllegalArgumentException("No valid combinations found for: " + championNames);
-		}
-
-		Set<Long> allGameIds = combinations.stream()
-			.flatMap(c -> c.getGameIds().stream())
-			.collect(Collectors.toSet());
-
-		List<GameParticipant> gameDetails = gameParticipantRepository
-			.findGameDetailsByGameIds(allGameIds);
-
-		// 🔥 다중 팀 리스트 전달
 		List<String> teamNames = filter.getTeamNames();
 
-		return converter.toDetailDtoMulti(combinations.get(0), gameDetails, teamNames, championNames);
+		return converter.toDetailDtoMulti(detailData.combinations.get(0), detailData.gameDetails, teamNames, championNames);
 	}
 
-	// 기존 메서드 유지 (내부 사용)
 	public CombinationDetailDto getCombinationDetail(
 		List<String> championNames,
 		CombinationFilterDto filter) {
 
 		List<String> normalizedChampionNames = championNames.stream()
 			.map(NameNormalizer::normalizeChampionName)
-			.collect(Collectors.toList());
+			.toList();
 
-		List<GameParticipant> participants = gameParticipantRepository.findFilteredParticipants(
+		DetailData detailData = retrieveCombinationAndGameDetails(normalizedChampionNames, filter, false);
+
+		return converter.toDetailDto(detailData.combinations.get(0), detailData.gameDetails, filter.teamName());
+	}
+
+	private DetailData retrieveCombinationAndGameDetails(
+		List<String> normalizedChampionNames,
+		Object filter,
+		boolean isMulti) {
+
+		List<GameParticipant> participants = isMulti
+			? getFilteredParticipants(normalizedChampionNames, (MultiCombinationFilterDto) filter)
+			: gameParticipantRepository.findFilteredParticipants(
 			normalizedChampionNames,
-			filter.year(),
-			filter.split(),
-			filter.leagueName(),
-			filter.teamName(),
-			filter.patch()
+			((CombinationFilterDto) filter).year(),
+			((CombinationFilterDto) filter).split(),
+			((CombinationFilterDto) filter).leagueName(),
+			((CombinationFilterDto) filter).teamName(),
+			((CombinationFilterDto) filter).patch()
 		);
 
 		if (participants.isEmpty()) {
-			throw new IllegalArgumentException("No combination found for: " + championNames);
+			throw new IllegalArgumentException("No combination found for: " + normalizedChampionNames);
 		}
 
 		List<TeamComposition> compositions = convertToCompositions(participants);
-		List<ChampionCombination> combinations = analyzer.findTopCombinations(compositions, championNames);
+		List<ChampionCombination> combinations = analyzer.findTopCombinations(compositions, normalizedChampionNames);
 
 		if (combinations.isEmpty()) {
-			throw new IllegalArgumentException("No valid combinations found for: " + championNames);
+			throw new IllegalArgumentException("No valid combinations found for: " + normalizedChampionNames);
 		}
 
 		Set<Long> allGameIds = combinations.stream()
@@ -212,38 +190,7 @@ public class CombinationService {
 		List<GameParticipant> gameDetails = gameParticipantRepository
 			.findGameDetailsByGameIds(allGameIds);
 
-		return converter.toDetailDto(combinations.get(0), gameDetails, filter.teamName());
-	}
-
-	// 기존 레거시 메서드 유지
-	public List<CombinationStatDto> findTopCombinationsLegacy(
-		List<String> championNames,
-		CombinationFilterDto filter) {
-
-		List<String> normalizedChampionNames = championNames.stream()
-			.map(NameNormalizer::normalizeChampionName)
-			.collect(Collectors.toList());
-
-		List<GameParticipant> participants = gameParticipantRepository.findFilteredParticipants(
-			normalizedChampionNames,
-			filter.year(),
-			filter.split(),
-			filter.leagueName(),
-			filter.teamName(),
-			filter.patch()
-		);
-
-		if (participants.isEmpty()) {
-			log.warn("⚠️ No participants found");
-			return Collections.emptyList();
-		}
-
-		List<TeamComposition> compositions = convertToCompositions(participants);
-		List<ChampionCombination> combinations = analyzer.findTopCombinations(compositions, championNames);
-
-		return combinations.stream()
-			.map(converter::toStatDto)
-			.collect(Collectors.toList());
+		return new DetailData(combinations, gameDetails);
 	}
 
 	private List<TeamComposition> convertToCompositions(List<GameParticipant> participants) {
@@ -253,7 +200,7 @@ public class CombinationService {
 			))
 			.values().stream()
 			.map(factory::createFromParticipants)
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	private List<GameParticipant> getFilteredParticipants(List<String> championNames,
@@ -284,4 +231,6 @@ public class CombinationService {
 			filter.getPatch()
 		);
 	}
+
+	private record DetailData(List<ChampionCombination> combinations, List<GameParticipant> gameDetails) {}
 }
